Starship: Add WSL config

--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -7,3 +7,6 @@
 truncation_length = 10
 truncate_to_repo = true
 
+[git_status]
+# WSL
+windows_starship = '/mnt/c/Users/Pablo/scoop/apps/starship/current/starship.exe'
